<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Zoom</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="Camera_Button">Camera</string>
    <string name="Gallery_Button">Gallery</string>
    <string name="Map_Button">Map</string>
    <string name="Setting_Button">Setting</string>
    <string name="title_activity_display_gallery">DisplayGallery</string>
    <string name="title_activity_display_map">DisplayMap</string>
    <string name="title_activity_setting">Setting</string>
    <string name="title_activity_open_camera">OpenCamera</string>
    <string name="title_activity_full_screen">FullScreen</string>
    <string name="Longitude">Longitude</string>
    <string name="Latitude">Latitude</string>
    <string name="action_search">Search</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_help">Help</string>
    <string name="action_check_update">Check Update</string>
    <string name="profile">Profile</string>
    <string name="title_activity_open_profile">OpenProfile</string>
    <string name="MyGallery">My Gallery</string>
    <string name="MyFriends">Friends</string>
    <string name="Settings">Setting</string>
    <string name="title_activity_my_gallery_fragment">MyGalleryFragment</string>
    <string name="title_activity_test_camera">TestCamera</string>
    <string name="Add_Description">Write a Description</string>
    <string name="save_photo">Save Photo</string>
    <string name="title_activity_gallery_test">GalleryTest</string>
    <string name="title_activity_full_screen_view">FullScreenViewActivity</string>
    <string name="title_activity_grid_view">GridViewActivity</string>

</resources>
