<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>

    <item 
        android:id="@+id/action_search"
        android:icon="@drawable/ic_action_search"
        android:title ="@string/action_search"
        android:showAsAction="ifRoom"
        android:actionViewClass="android.widget.SearchView"/>
    
    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_action_refresh"
        android:title ="@string/action_refresh"
        android:showAsAction = "ifRoom"/> 
        
    <item
        android:id="@+id/action_help"
        android:icon="@drawable/ic_action_help"
        android:title = "@string/action_help"
        android:showAsAction="never"/>
    <item 
        android:id="@+id/action_check_update"
        android:icon="@drawable/ic_action_refresh"
        android:title="@string/action_check_update"
        android:showAsAction="never"/>

</menu>
